--- a/pom.xml
+++ b/pom.xml
@@ -12,13 +12,13 @@
 		<maven.compiler.source>8</maven.compiler.source>
 		<maven.compiler.target>8</maven.compiler.target>
 		<slf4j.version>2.0.0-alpha7</slf4j.version>
-		<javalin.version>4.6.1</javalin.version>
+		<javalin.version>4.6.4</javalin.version>
 		<commons-logging.version>1.2</commons-logging.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>io.javalin</groupId>
-			<artifactId>javalin</artifactId>
+			<artifactId>javalin-bundle</artifactId>
 			<version>${javalin.version}</version>
 		</dependency>
 		<dependency>
