--- a/src/main/ui/package.json
+++ b/src/main/ui/package.json
@@ -19,13 +19,14 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "@types/file-saver": "^2.0.5",
     "@esri/arcgis-rest-request": "^4.0.3",
+    "@types/file-saver": "^2.0.5",
     "file-saver": "^2.0.5",
     "ngx-toastr": "^14.3.0",
     "ol": "^6.14.1",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "vis-network": "^9.1.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
